--- a/Flashcards/Flashcards.csproj
+++ b/Flashcards/Flashcards.csproj
@@ -52,7 +52,8 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Stack.cs" />
-    <Compile Include="StackController.cs" />
+    <Compile Include="FlashcardController.cs" />
+    <Compile Include="StacksController.cs" />
     <Compile Include="Validation.cs" />
   </ItemGroup>
   <ItemGroup>
