--- a/Flashcards/Flashcards.csproj
+++ b/Flashcards/Flashcards.csproj
@@ -47,13 +47,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Flashcard.cs" />
+    <Compile Include="Models\Flashcard.cs" />
+    <Compile Include="StudySession.cs" />
     <Compile Include="Views.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Stack.cs" />
-    <Compile Include="FlashcardController.cs" />
-    <Compile Include="StacksController.cs" />
+    <Compile Include="Models\Stack.cs" />
+    <Compile Include="Controllers\FlashcardController.cs" />
+    <Compile Include="Controllers\StacksController.cs" />
     <Compile Include="Validation.cs" />
   </ItemGroup>
   <ItemGroup>
