Added Session tracking. Added Sessions table to database. Added Saving and deleting of Study sessions. Added Session Model.

--- a/Flashcards/Flashcards.csproj
+++ b/Flashcards/Flashcards.csproj
@@ -49,6 +49,7 @@
   <ItemGroup>
     <Compile Include="Models\Flashcard.cs" />
     <Compile Include="Models\FlashcardDTO.cs" />
+    <Compile Include="Models\Session.cs" />
     <Compile Include="StudySession.cs" />
     <Compile Include="Views.cs" />
     <Compile Include="Program.cs" />
