--- a/Flashcards/App.config
+++ b/Flashcards/App.config
@@ -4,6 +4,7 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8" />
     </startup>
 	<appSettings>
+		<add key="dbString" value ="Data Source=(LocalDb)\LocalDBFlashcards;Integrated Security=True"/>
 		<add key ="conString" value="Data Source=(LocalDb)\LocalDBFlashcards;Initial Catalog=Flashcards;Integrated Security=True;Pooling=False"/>
 	</appSettings>
 </configuration>
