--- a/Flashcards/Flashcards.csproj
+++ b/Flashcards/Flashcards.csproj
@@ -51,7 +51,7 @@
     <Compile Include="Models\FlashcardDTO.cs" />
     <Compile Include="Models\Session.cs" />
     <Compile Include="StudySession.cs" />
-    <Compile Include="Views.cs" />
+    <Compile Include="UserInput.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Models\Stack.cs" />
