Added Yearly Session View. Added PIVOT SQL query to fetch the yearly score totals for each month.

--- a/Flashcards/Flashcards.csproj
+++ b/Flashcards/Flashcards.csproj
@@ -50,6 +50,7 @@
     <Compile Include="Models\Flashcard.cs" />
     <Compile Include="Models\FlashcardDTO.cs" />
     <Compile Include="Models\Session.cs" />
+    <Compile Include="Models\YearlySession.cs" />
     <Compile Include="StudySession.cs" />
     <Compile Include="UserInput.cs" />
     <Compile Include="Program.cs" />
